--- a/client/src/app/quiz-form/quiz-form.component.html
+++ b/client/src/app/quiz-form/quiz-form.component.html
@@ -35,101 +35,32 @@
               <mat-form-field appearance="outline" class="full-width">
                 <mat-label>Question Type</mat-label>
                 <mat-select formControlName="type">
-                  <mat-option value="multiple-choice">
-                    Multiple Choice
-                  </mat-option>
+                  <mat-option value="multiple-choice"
+                    >Multiple Choice</mat-option
+                  >
                   <mat-option value="ordering">Ordering</mat-option>
                 </mat-select>
               </mat-form-field>
 
-              <div formArrayName="options">
-                <div
-                  *ngFor="
-                    let option of getOptions(qIndex).controls;
-                    let oIndex = index
-                  "
-                  class="option-item"
-                >
-                  <div class="option-container">
-                    <mat-form-field appearance="outline" class="full-width">
-                      <mat-label>Option {{ oIndex + 1 }}</mat-label>
-                      <input matInput [formControlName]="oIndex" type="text" />
-                    </mat-form-field>
-                    <button
-                      matSuffix
-                      mat-icon-button
-                      color="warn"
-                      type="button"
-                      (click)="removeOption(qIndex, oIndex)"
-                    >
-                      <mat-icon>delete</mat-icon>
-                    </button>
-                  </div>
-                </div>
-                <button
-                  mat-raised-button
-                  color="primary"
-                  type="button"
-                  (click)="addOption(qIndex)"
-                >
-                  Add Option
-                </button>
-              </div>
+              <ng-container
+                *ngIf="
+                  questions.at(qIndex).get('type')?.value === 'multiple-choice'
+                "
+              >
+                <app-multiple-choice-question-form
+                  [questionForm]="getQuestionFormGroup(qIndex)"
+                  (remove)="removeQuestion(qIndex)"
+                ></app-multiple-choice-question-form>
+              </ng-container>
 
-              <div *ngIf="questions.at(qIndex).get('type')?.value === 'multiple-choice'">
-                <div class="answer-selection">
-                  <mat-label>Correct Answer</mat-label>
-                  <mat-radio-group formControlName="answer">
-                    <mat-radio-button
-                      *ngFor="
-                        let option of getOptions(qIndex).controls;
-                        let oIndex = index
-                      "
-                      [value]="oIndex"
-                    >
-                      Option {{ oIndex + 1 }}
-                    </mat-radio-button>
-                    <mat-error
-                      *ngIf="questions
-                        .at(qIndex)
-                        .get('answer')
-                        ?.hasError('required')"
-                    >
-                      You must select a correct answer.
-                    </mat-error>
-                  </mat-radio-group>
-                </div>
-              </div>
-
-              <!-- <div *ngIf="questions.at(qIndex).get('type')?.value === 'ordering'">
-                <div class="answer-selection">
-                  <mat-label>Correct Order</mat-label>
-                  <ol>
-                    <li
-                      *ngFor="
-                        let option of getOptions(qIndex).controls;
-                        let oIndex = index
-                      "
-                    >
-                      Option {{ oIndex + 1 }}
-                    </li>
-                 ```html
-                  </ol>
-                  <mat-form-field appearance="outline" class="full-width">
-                    <mat-label>Enter Correct Order (comma-separated indices)</mat-label>
-                    <input
-                      matInput
-                      formControlName="answer"
-                      placeholder="e.g., 1,3,2,0"
-                      type="text"
-                    />
-                    <mat-error *ngIf="questions.at(qIndex).get('answer')?.hasError('required')">
-                      You must specify the correct order.
-                    </mat-error>
-                  </mat-form-field>
-                </div>
-              </div> -->
-
+              <ng-container
+                *ngIf="questions.at(qIndex).get('type')?.value === 'ordering'"
+              >
+                <app-ordering-question-form
+                  [questionForm]="getQuestionFormGroup(qIndex)"
+                  (remove)="removeQuestion(qIndex)"
+                ></app-ordering-question-form>
+              </ng-container>
             </mat-card-content>
             <mat-card-actions>
               <button
