--- a/client/src/app/ordering-question/ordering-question.component.css
+++ b/client/src/app/ordering-question/ordering-question.component.css
@@ -1,21 +1,54 @@
-.ordering-question {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
+/* https://material.angular.io/cdk/drag-drop/overview */
 .drag-drop-list {
-  display: flex;
-  gap: 10px;
-  margin-top: 20px;
+  width: 500px;
+  max-width: 100%;
+  border: solid 1px #ccc;
+  min-height: 60px;
+  display: block;
+  background: white;
+  border-radius: 4px;
+  overflow: hidden;
 }
 
 .drag-drop-item {
-  padding: 10px 20px;
-  background-color: #e0e0e0;
+  padding: 20px 10px;
+  border-bottom: solid 1px #ccc;
+  color: rgba(0, 0, 0, 0.87);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  box-sizing: border-box;
+  cursor: move;
+  background: white;
+  font-size: 14px;
+}
+
+.drag-drop-item:last-child {
+  border: none;
+}
+
+.cdk-drag-preview {
+  box-sizing: border-box;
   border-radius: 4px;
-  cursor: pointer;
-  user-select: none;
+  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+              0 8px 10px 1px rgba(0, 0, 0, 0.14),
+              0 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
+
+.cdk-drag-animating {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.drag-drop-list.cdk-drop-list-dragging .drag-drop-item:not(.cdk-drag-placeholder) {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.cdk-drag-placeholder {
+  background: #ccc;
+  border: dotted 3px #999;
+  min-height: 60px;
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
 .correct-answer {
