Change quiz reading header, clearer log in error for quiz attempt

--- a/client/src/app/play-quiz/play-quiz.component.html
+++ b/client/src/app/play-quiz/play-quiz.component.html
@@ -4,7 +4,7 @@
     <mat-accordion>
       <mat-expansion-panel [expanded]="!showQuestions">
         <mat-expansion-panel-header>
-          <mat-panel-title> Reading </mat-panel-title>
+          <mat-panel-title> Reading/Prompt </mat-panel-title>
         </mat-expansion-panel-header>
         <p>{{ quiz?.reading }}</p>
       </mat-expansion-panel>
